--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ntp2-2024-a-examen",
+  "name": "pnt2-nextjs-2024",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "postcss": "^8",
